--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,18 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
+    "filepond": "^4.30.3",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-facebook-login": "^4.1.1",
+    "react-filepond": "^7.1.1",
+    "react-google-login": "^5.2.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.3",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
@@ -22,7 +29,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "style": "npx tailwindcss build -i src/styles/style.css -o src/style.css"
+    "style": "npx tailwindcss build -i src/styles/style.css -o src/style.css --watch"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +52,7 @@
   "devDependencies": {
     "autoprefixer": "^10.3.7",
     "postcss": "^8.3.9",
+    "react-app-rewire-alias": "^1.1.3",
     "tailwindcss": "^2.2.16"
   }
 }
