--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.9"
+    "mongoose": "^6.0.9",
+    "multer": "^1.4.3",
+    "passport": "^0.5.0",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
+    "react-toastify": "^8.0.3"
   }
 }
