--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,14 @@
     "filepond": "^4.30.3",
     "filepond-plugin-image-exif-orientation": "^1.0.11",
     "filepond-plugin-image-preview": "^4.6.10",
+    "framer-motion": "^4.1.17",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
     "react-filepond": "^7.1.1",
     "react-google-login": "^5.2.2",
+    "react-hook-form": "^7.17.4",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
