--- a/server/package.json
+++ b/server/package.json
@@ -2,25 +2,31 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.23.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "faker": "^5.5.3",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^6.0.9",
+    "mongoose-paginate-v2": "^1.4.2",
     "multer": "^1.4.3",
     "passport": "^0.5.0",
+    "passport-google-oauth": "^2.0.0",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
-    "react-toastify": "^8.0.3"
+    "react-toastify": "^8.0.3",
+    "redis": "^3.1.2"
   }
 }
